--- a/woolly/public/style.css
+++ b/woolly/public/style.css
@@ -1,11 +1,15 @@
+html, body, #root {
+	height: 100%;
+}
+
 body {
+	box-sizing: border-box !important;
 	margin: 0;
 	padding: 0;
 	font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	box-sizing: border-box;
 }
 
 code {
